# agente_python_streamlit_conKimiK2

./: .dockerignore  .gitignore  README.md  ROADMAP.md  config.py  db.py  docker-compose.yml  dockerfile  export.py  file_handler.py  llm_handler.py  main.py  pyproject.toml  refactor.md  styles.py  ui_components.py  utils.py
.streamlit/: config.toml
app/: config.py  main.py  styles.py
app/core/: code_tools.py  generate_hash.py  utils.py
app/db/: persistence.py
app/llm/: llm_handler.py  prompts.py
app/ui/: components.py
