[project]
name = "agentes"
version = "0.1.0"
description = "Agente de IA con Python 3.12+ y Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.39.0",
    "groq==0.9.0",
    "python-dotenv==1.0.1",
    "reportlab>=4.0.0",
    "httpx==0.27.0",
    "pypdf>=4.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "bcrypt==4.1.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "hypothesis>=6.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88  # PEP 8 recomienda 79-88
src = ["app", "tests"]  # Rutas de código fuente para import sorting

[tool.ruff.lint]
select = [
    "E",    # Errores de estilo
    "F",    # Pyflakes
    "I",    # Import sorting
    "B",    # Bugbear
    "UP",   # Pyupgrade
    "S",    # Seguridad
    "C90",  # Complejidad ciclomática
    "PERF", # Performance
    "TCH",  # Type checking imports
    "TID",  # Tidy imports
    "RUF",  # Reglas específicas de Ruff
]
ignore = [
    "S101",  # Permitir asserts en tests
    "B008",  # Permitir llamadas a funciones en defaults de parámetros
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]  # Permitir asserts y random en tests
"main.py" = ["T201"]  # Permitir prints en Streamlit

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "groq.*",
    "bcrypt.*",
    "reportlab.*",
    "pypdf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"